syntax="proto3";
package freelancer_grpc;

service FreelancerHandler {
    rpc CreateFreelancer(UserID) returns (Freelancer);
    rpc FindByUser(UserID) returns (Freelancer);
}

message Freelancer {
    int64 ID=1;
    int64 AccountId=2;
    int64 Country=3;
    int64 City=4;
    string Address=5;
    string Phone=6;
    string TagLine=7;
    string Overview=8;
    int64 ExperienceLevelId=9;
    int64 SpecialityId=10;
}

message FreelancerOutput {
    int64 ID=1;
    int64 AccountId=2;
    string Country=3;
    string City=4;
    string Address=5;
    string Phone=6;
    string TagLine=7;
    string Overview=8;
    int64 ExperienceLevelId=9;
    int64 SpecialityId=10;
}

message UserID {
    int64 ID=1;
}
