syntax="proto3";
package response_grpc;
import "google/protobuf/timestamp.proto";

service ResponseHandler {
    rpc Find(ResponseID) returns (Response);
    rpc Update(Response) returns (Nothing);
}

message Response {
    int64 ID=1;
    int64 FreelancerId=2;
    int64 JobId=3;
    string Files=4;
    google.protobuf.Timestamp Date=5;
    string StatusManager=6;
    string StatusFreelancer=7;
    float PaymentAmount=8;
    int32 TimeEstimation=9;
}

message ResponseID {
    int64 ID=1;
}

message Status {
    string name=1;
}

message Nothing {
    bool dummy=1;
}
